--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"webpack-stream": "latest"
 	},
 	"dependencies": {
+		"animate.css": "^4.1.1",
 		"gulp-cli": "^2.3.0",
 		"simplebar": "latest"
 	}
