--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"gulp-notify": "latest",
 		"gulp-plumber": "latest",
 		"gulp-prettier": "latest",
+		"gulp-real-favicon": "^0.3.2",
 		"gulp-rename": "latest",
 		"gulp-svg-sprite": "latest",
 		"gulp-ttf2woff": "latest",
